Update vibrato UI and bug fix CSS for mobile.

--- a/index.html
+++ b/index.html
@@ -75,52 +75,52 @@
 				<fieldset class="panel">
 					<h1>Algorithm</h1>
 					<div class="row">
-						<div class="col-2 col-md-1 my-auto text-center">
+						<div class="col-2 col-sm-1 my-auto text-center">
 							<input type="radio" name="algorithm" value="0" id="algorithm-0">
 						</div>
-						<label class="col-10 col-md-5 my-4" for="algorithm-0">
+						<label class="col-10 col-sm-5 my-4" for="algorithm-0">
 							<img src="img/algorithm-0.png" alt="1&rarr;2&rarr;3&rarr;4" class="mw-100 my-4" width="288" height="32">
 						</label>
-						<div class="col-2 col-md-1 my-auto text-center">
+						<div class="col-2 col-sm-1 my-auto text-center">
 							<input type="radio" name="algorithm" value="1" id="algorithm-1">
 						</div>
-						<label class="col-10 col-md-5 my-4" for="algorithm-1">
+						<label class="col-10 col-sm-5 my-4" for="algorithm-1">
 							<img src="img/algorithm-1.png" alt="1&amp;2&rarr;3&rarr;4" class="mw-100" width="208" height="80">
 						</label>
 					</div>
 					<div class="row">
-						<div class="col-2 col-md-1 my-auto text-center">
+						<div class="col-2 col-sm-1 my-auto text-center">
 							<input type="radio" name="algorithm" value="2" id="algorithm-2">
 						</div>
-						<label class="col-10 col-md-5 my-4" for="algorithm-2">
+						<label class="col-10 col-sm-5 my-4" for="algorithm-2">
 							<img src="img/algorithm-2.png" alt="2&rarr;3&rarr;4 1&rarr;4" class="mw-100" width="208" height="80">
 						</label>
-						<div class="col-2 col-md-1 my-auto text-center">
+						<div class="col-2 col-sm-1 my-auto text-center">
 							<input type="radio" name="algorithm" value="3" id="algorithm-3">
 						</div>
-						<label class="col-10 col-md-5 my-4" for="algorithm-3">
+						<label class="col-10 col-sm-5 my-4" for="algorithm-3">
 							<img src="img/algorithm-3.png" alt="1&rarr;2&rarr;4 3&rarr;4" class="mw-100" width="208" height="80">
 						</label>
 					</div>
 					<div class="row">
-						<div class="col-2 col-md-1 my-auto text-center">
+						<div class="col-2 col-sm-1 my-auto text-center">
 							<input type="radio" name="algorithm" value="4" checked id="algorithm-4">
 						</div>
-						<label class="col-10 col-md-5 my-4" for="algorithm-4">
+						<label class="col-10 col-sm-5 my-4" for="algorithm-4">
 							<img src="img/algorithm-4.png" alt="1&rarr;2 3&rarr;4" class="mw-100 my-4" width="144" height="72">
 						</label>
-						<div class="col-2 col-md-1 my-auto text-center">
+						<div class="col-2 col-sm-1 my-auto text-center">
 							<input type="radio" name="algorithm" value="5" id="algorithm-5">
 						</div>
-						<label class="col-10 col-md-5 my-4" for="algorithm-5">
+						<label class="col-10 col-sm-5 my-4" for="algorithm-5">
 							<img src="img/algorithm-5.png" alt="1&rarr;2, 3 &amp; 4" class="mw-100" width="144" height="112">
 						</label>
 					</div>
 					<div class="row form-group">
-						<div class="col-2 col-md-1 my-auto text-center">
+						<div class="col-2 col-sm-1 my-auto text-center">
 							<input type="radio" name="algorithm" value="6" id="algorithm-6">
 						</div>
-						<label class="col-10 col-md-5 my-4" for="algorithm-6">
+						<label class="col-10 col-sm-5 my-4" for="algorithm-6">
 							<img src="img/algorithm-6.png" alt="1&rarr;2" width="144" height="112">
 						</label>
 						<div class="col-1 my-auto text-center">
@@ -131,18 +131,18 @@
 						</label>
 					</div>
 					<div class="row form-group">
-						<div class="col-2 col-md-1 my-auto text-center">
+						<div class="col-2 col-sm-1 my-auto text-center">
 							<input type="radio" name="algorithm" value="8" id="algorithm-8">
 						</div>
-						<label class="col-10 col-md-5 my-4" for="algorithm-8">
+						<label class="col-10 col-sm-5 my-4" for="algorithm-8">
 							<img src="img/algorithm-8.png" alt="1&rarr;2&rarr;3" width="216" height="80">
 						</label>
 					</div>
 					<div class="row">
-						<div class="col-4 col-md-2 col-form-label">
+						<div class="col-4 col-sm-2 col-form-label">
 							Operator 1
 						</div>
-						<div class="col-8 col-md-4 mb-3">
+						<div class="col-8 col-sm-4 mb-3">
 							<div class="btn-group btn-group-toggle" data-toggle="buttons">
 								<label class="btn btn-dark active">
 									<input type="radio" name="op1-enable" id="op1-enabled" checked>Enabled
@@ -152,10 +152,10 @@
 								</label>
 							</div>
 						</div>
-						<div class="col-4 col-md-2 col-form-label">
+						<div class="col-4 col-sm-2 col-form-label">
 							Operator 2
 						</div>
-						<div class="col-8 col-md-4 mb-3">
+						<div class="col-8 col-sm-4 mb-3">
 							<div class="btn-group btn-group-toggle" data-toggle="buttons">
 								<label class="btn btn-dark active">
 									<input type="radio" name="op2-enable" id="op2-enabled" checked>Enabled
@@ -167,10 +167,10 @@
 						</div>
 					</div>
 					<div class="row form-group">
-						<div class="col-4 col-md-2 col-form-label">
+						<div class="col-4 col-sm-2 col-form-label">
 							Operator 3
 						</div>
-						<div class="col-8 col-md-4 mb-3">
+						<div class="col-8 col-sm-4 mb-3">
 							<div class="btn-group btn-group-toggle" data-toggle="buttons">
 								<label class="btn btn-dark active">
 									<input type="radio" name="op3-enable" id="op3-enabled">Enabled
@@ -180,10 +180,10 @@
 								</label>
 							</div>
 						</div>
-						<div class="col-4 col-md-2 col-form-label">
+						<div class="col-4 col-sm-2 col-form-label">
 							Operator 4
 						</div>
-						<div class="col-8 col-md-4 mb-3">
+						<div class="col-8 col-sm-4 mb-3">
 							<div class="btn-group btn-group-toggle" data-toggle="buttons">
 								<label class="btn btn-dark active">
 									<input type="radio" name="op4-enable" id="op4-enabled">Enabled
@@ -269,7 +269,7 @@
 							</tr>
 						</table>
 					</div>
-					<div class="align-middle text-center ml-md-5">
+					<div class="align-middle text-center ml-sm-5">
 						<label for="distortion">Distortion</label>
 						<div class="d-inline-block mx-2 align-middle">
 							<div class="input-group">
@@ -293,7 +293,7 @@
 						<div class="col-12 col-md-6 mb-3 my-md-auto pl-md-0">
 							<input type="range" min="0" max="6" value="0" class="form-control-range mt-1" id="lfo-rate-slider">
 						</div>
-						<div class="col-6 col-md-3 pr-md-4">
+						<div class="col-6 col-sm-3 pr-md-4 ml-auto">
 							<div class="input-group">
 								<input type="number" min="0" max="99.9" step="0.2" value="0.00" class="form-control led-display" id="lfo-rate" disabled>
 								<div class="input-group-append">
@@ -302,9 +302,9 @@
 							</div>
 						</div>
 					</div>
-					<div class="row form-group">
+					<div class="row form-group row small">
 						<div class="d-none d-md-block col-md-3 col-form-label"></div>
-						<div class="col-auto pl-md-0 small">
+						<div class="col-6 col-md-2 pl-md-0">
 							Slow
 							<div class="custom-control custom-switch custom-control-inline">
 								<input type="checkbox" class="custom-control-input" id="fast-lfo">
@@ -312,7 +312,7 @@
 							</div>
 						</div>
 						<div class="col-auto">
-							<div class="form-check small">
+							<div class="form-check">
 								<input type="checkbox" id="lfo-rate-free" class="form-check-input">
 								<label for="lfo-rate-free" class="form-check-label">
 									Free Choice
@@ -327,7 +327,7 @@
 						<div class="col-12 col-md-6 mb-3 my-md-auto pl-md-0">
 							<input type="range" min="0" max="127" value="0" class="form-control-range mt-1" id="lfo-delay-slider">
 						</div>
-						<div class="col-6 col-md-3 pr-md-4">
+						<div class="col-6 col-sm-3 pr-md-4 ml-auto">
 							<div class="input-group">
 								<input type="number" min="0" max="9.9" step="0.1" value="0" class="form-control led-display" id="lfo-delay">
 								<div class="input-group-append">
@@ -343,7 +343,7 @@
 						<div class="col-12 col-md-6 mb-3 my-md-auto pl-md-0">
 							<input type="range" min="0" max="127" value="0" class="form-control-range mt-1" id="lfo-fade-slider">
 						</div>
-						<div class="col-6 col-md-3 pr-md-4">
+						<div class="col-6 col-sm-3 pr-md-4 ml-auto">
 							<div class="input-group">
 								<input type="number" min="-9.9" max="9.9" step="0.1" value="0" class="form-control led-display" id="lfo-fade">
 								<div class="input-group-append">
@@ -353,8 +353,8 @@
 						</div>
 					</div>
 					<div class="row form-group">
-						<div class="d-none d-md-block col-md-3 col-form-label"></div>
-						<div class="col-auto pl-md-0 small">
+						<div class="d-none d-md-block col-md-3"></div>
+						<div class="col-auto pl-md-0 small ml-auto ml-md-0">
 							<div class="form-check form-check-inline">
 								<input type="radio" name="lfo-fade-direction" value="1" id="lfo-fade-in" class="form-check-input" checked>
 								<label for="lfo-fade-in" class="form-check-label">
@@ -369,14 +369,14 @@
 							</div>
 						</div>
 					</div>
-					<div class="row">
+					<div class="row form-group">
 						<label class="col-auto col-md-3 col-form-label" for="vibrato-slider">
 							Vibrato
 						</label>
 						<div class="col-12 col-md-6 mb-3 my-md-auto pl-md-0">
 							<input type="range" min="0" max="7" value="0" class="form-control-range mt-1" id="vibrato-slider">
 						</div>
-						<div class="col-6 col-md-3 pr-md-4">
+						<div class="col-6 col-sm-3 pr-md-4 ml-auto">
 							<div class="input-group">
 								<input type="number" min="-999" max="999" value="0" class="form-control led-display" id="vibrato" disabled>
 								<div class="input-group-append">
@@ -385,15 +385,21 @@
 							</div>
 						</div>
 					</div>
-					<div class="row form-group">
-						<div class="d-none d-md-block col-md-3 col-form-label"></div>
-						<div class="col-auto pl-md-0">
-							<div class="form-check small">
+					<div class="row form-group small">
+						<div class="col-6 col-md-3"></div>
+						<div class="col-6 col-md-2 pl-md-0 mb-3">
+							<div class="form-check">
 								<input type="checkbox" id="vibrato-free" class="form-check-input">
 								<label for="vibrato-free" class="form-check-label">
 									Free Choice
 								</label>
 							</div>
+						</div>
+						<div class="col-8 col-md-4 fade">
+							<input type="range" min="1" max="7" class="form-control-range mt-1" id="vibrato-range">
+						</div>
+						<div class="col-auto fade">
+							0&ThinSpace;&ndash;&ThinSpace;<span id="vibrato-max"></span>&ThinSpace;cents
 						</div>
 					</div>
 				</fieldset>
@@ -417,7 +423,7 @@
 							<div class="col-12 col-md-6 mb-3 my-md-auto pl-md-0">
 								<input type="range" min="2900" max="4000" step="10" value="4000" class="form-control-range mt-1" id="filter-cutoff-slider">
 							</div>
-							<div class="col-6 col-md-3 pr-md-4">
+							<div class="col-6 col-sm-3 pr-md-4 ml-auto">
 								<div class="input-group">
 									<input type="number" min="0" max="22050" step="10" value="4000" class="form-control led-display" id="filter-cutoff">
 									<div class="input-group-append">
@@ -433,7 +439,7 @@
 							<div class="col-12 col-md-6 mb-3 my-md-auto pl-md-0">
 								<input type="range" min="0" max="12" step="0.1" value="0" class="form-control-range mt-1" id="filter-q-slider">
 							</div>
-							<div class="col-6 col-md-3 pr-md-4">
+							<div class="col-6 col-sm-3 pr-md-4 ml-auto">
 								<div class="input-group">
 									<input type="number" min="-770.6" max="770.6" step="0.1" value="0" class="form-control led-display" id="filter-q">
 									<div class="input-group-append">
@@ -559,10 +565,10 @@
 								</label>
 							</div>
 						</div>
-						<div class="col-12 col-md-6 mb-3 my-md-auto pl-md-0">
+						<div class="col-12 col-md-7 mb-3 my-md-auto pl-md-0">
 							<input type="range" min="0" max="15" value="1" class="form-control-range mt-1" id="op$-multiple-slider">
 						</div>
-						<div class="col-4 col-md-2">
+						<div class="col-4 col-sm-2 pl-md-0 ml-auto">
 							<input type="text" value="1" class="form-control led-display" id="op$-multiple" disabled pattern="\d+([/.]\d+)?">
 						</div>
 					</div>
@@ -612,7 +618,7 @@
 					<h1>Envelope</h1>
 					<div class="row form-group">
 						<div class="d-none d-md-block col-3"></div>
-						<div class="col-12 col-md-6 text-center" style="padding: 7px; background: black; border-radius: 4px">
+						<div class="col-12 col-md-7 text-center" style="padding: 7px; background: black; border-radius: 4px">
 							<img src="img/adsr.svg" width="375" height="216" alt="ADSR envelope">
 						</div>
 					</div>
@@ -620,10 +626,10 @@
 						<label class="col-auto col-md-3 col-form-label" for="op$-rate-scale-slider">
 							Rate Scaling
 						</label>
-						<div class="col-12 col-md-6 mb-3 my-md-auto pl-md-0">
+						<div class="col-12 col-md-7 mb-3 my-md-auto pl-md-0">
 							<input type="range" min="-4" max="4" value="1" class="form-control-range mt-1" id="op$-rate-scale-slider">
 						</div>
-						<div class="col-4 col-md-2">
+						<div class="col-4 col-sm-2 pl-md-0 ml-auto">
 							<input type="number" min="-9.9" max="9.9" step="0.1" value="1" class="form-control led-display" id="op$-rate-scale" disabled>
 						</div>
 					</div>
@@ -631,7 +637,7 @@
 						<label class="col-auto col-md-3 col-form-label pt-0" for="op$-total-level-slider">
 							Min Attenuation <small>(L1)</small>
 						</label>
-						<div class="col-12 col-md-6 pl-md-0">
+						<div class="col-12 col-md-7 pl-md-0">
 							<input type="range" min="0" max="127" value="0" class="form-control-range mt-1 mb-2" id="op$-total-level-slider">
 							<div class="form-check small">
 								<input type="checkbox" class="form-check-input" id="op$-total-level-large">
@@ -640,7 +646,7 @@
 								</label>
 							</div>
 						</div>
-						<div class="col-4 col-md-2">
+						<div class="col-4 col-sm-2 pl-md-0 ml-auto">
 							<input type="number" min="0" max="255" step="0.125" value="0" class="form-control led-display" id="op$-total-level" disabled>
 						</div>
 					</div>
@@ -648,10 +654,10 @@
 						<label class="col-auto col-md-3 col-form-label" for="op$-key-velocity-slider">
 							Velocity Sensitivity
 						</label>
-						<div class="col-12 col-md-6 mb-3 my-md-auto pl-md-0">
+						<div class="col-12 col-md-7 mb-3 my-md-auto pl-md-0">
 							<input type="range" min="-127" max="127" value="0" class="form-control-range mt-1" id="op$-key-velocity-slider">
 						</div>
-						<div class="col-4 col-md-2">
+						<div class="col-4 col-sm-2 pl-md-0 ml-auto">
 							<input type="number" value="0" class="form-control led-display" id="op$-key-velocity" disabled>
 						</div>
 					</div>
@@ -659,10 +665,10 @@
 						<label class="col-auto col-md-3 col-form-label" for="op$-attack-slider">
 							Attack Rate <small>(R1)</small>
 						</label>
-						<div class="col-12 col-md-6 mb-3 my-md-auto pl-md-0">
+						<div class="col-12 col-md-7 mb-3 my-md-auto pl-md-0">
 							<input type="range" min="1" max="31" value="31" class="form-control-range mt-1" id="op$-attack-slider">
 						</div>
-						<div class="col-4 col-md-2">
+						<div class="col-4 col-sm-2 pl-md-0 ml-auto">
 							<input type="number" value="31" class="form-control led-display" id="op$-attack" disabled>
 						</div>
 					</div>
@@ -670,10 +676,10 @@
 						<label class="col-auto col-md-3 col-form-label" for="op$-decay-slider">
 							Decay Rate <small>(R2)</small>
 						</label>
-						<div class="col-12 col-md-6 mb-3 my-md-auto pl-md-0">
+						<div class="col-12 col-md-7 mb-3 my-md-auto pl-md-0">
 							<input type="range" min="0" max="31" value="0" class="form-control-range mt-1" id="op$-decay-slider">
 						</div>
-						<div class="col-4 col-md-2">
+						<div class="col-4 col-sm-2 pl-md-0 ml-auto">
 							<input type="number" value="0" class="form-control led-display" id="op$-decay" disabled>
 						</div>
 					</div>
@@ -681,10 +687,10 @@
 						<label class="col-auto col-md-3 col-form-label" for="op$-sustain-slider">
 							Sustain <small>(L2)</small>
 						</label>
-						<div class="col-12 col-md-6 mb-3 my-md-auto pl-md-0">
+						<div class="col-12 col-md-7 mb-3 my-md-auto pl-md-0">
 							<input type="range" min="0" max="16" value="0" class="form-control-range mt-1" id="op$-sustain-slider">
 						</div>
-						<div class="col-4 col-md-2">
+						<div class="col-4 col-sm-2 pl-md-0 ml-auto">
 							<input type="number" min="0" max="16" step="0.125" value="0" class="form-control led-display" id="op$-sustain" disabled>
 						</div>
 					</div>
@@ -692,10 +698,10 @@
 						<label class="col-auto col-md-3 col-form-label" for="op$-sustain-rate-slider">
 							Sustain Rate <small>(R3)</small>
 						</label>
-						<div class="col-12 col-md-6 mb-3 my-md-auto pl-md-0">
+						<div class="col-12 col-md-7 mb-3 my-md-auto pl-md-0">
 							<input type="range" min="0" max="31" value="0" class="form-control-range mt-1" id="op$-sustain-rate-slider">
 						</div>
-						<div class="col-4 col-md-2">
+						<div class="col-4 col-sm-2 pl-md-0 ml-auto">
 							<input type="number" value="0" class="form-control led-display" id="op$-sustain-rate" disabled>
 						</div>
 					</div>
@@ -703,22 +709,24 @@
 						<label class="col-auto col-md-3 col-form-label" for="op$-release-slider">
 							Release <small>(R4)</small>
 						</label>
-						<div class="col-12 col-md-6 mb-3 my-md-auto pl-md-0">
+						<div class="col-12 col-md-7 mb-3 my-md-auto pl-md-0">
 							<input type="range" min="0" max="15" value="15" class="form-control-range mt-1" id="op$-release-slider">
 						</div>
-						<div class="col-4 col-md-2">
+						<div class="col-4 col-sm-2 pl-md-0 ml-auto">
 							<input type="number" value="15" class="form-control led-display" id="op$-release" disabled>
 						</div>
 					</div>
 					<div class="row form-group">
 						<div class="d-none d-md-block col-3"></div>
-						<div class="col-auto pl-md-0">
+						<div class="col-auto col-md-3 pl-md-0">
 							<div class="form-check form-check-inline small">
 								<input type="checkbox" id="op$-rates-free" class="form-check-input">
 								<label for="op$-rates-free" class="form-check-label">
 									Free choice of rates
 								</label>
 							</div>
+						</div>
+						<div class="col-auto">
 							<div class="form-check form-check-inline small">
 								<input type="checkbox" id="op$-levels-free" class="form-check-input">
 								<label for="op$-levels-free" class="form-check-label">
