--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="row form-group">
+					<div class="row mb-5">
 						<div class="d-none d-md-block col-md-3"></div>
 						<div class="col-auto pl-md-0 small ml-auto ml-md-0">
 							<div class="form-check form-check-inline">
@@ -385,9 +385,9 @@
 							</div>
 						</div>
 					</div>
-					<div class="row form-group small">
+					<div class="row mb-5 small">
 						<div class="col-6 col-md-3"></div>
-						<div class="col-6 col-md-2 pl-md-0 mb-3">
+						<div class="col-6 col-md-2 pl-md-0">
 							<div class="form-check">
 								<input type="checkbox" id="vibrato-free" class="form-check-input">
 								<label for="vibrato-free" class="form-check-label">
@@ -400,6 +400,39 @@
 						</div>
 						<div class="col-auto fade">
 							0&ThinSpace;&ndash;&ThinSpace;<span id="vibrato-max"></span>&ThinSpace;cents
+						</div>
+					</div>
+					<div class="row form-group">
+						<label class="col-auto col-md-3 col-form-label" for="tremolo-slider">
+							Tremolo / Wah
+						</label>
+						<div class="col-12 col-md-6 mb-3 my-md-auto pl-md-0">
+							<input type="range" min="0" max="3" value="0" class="form-control-range mt-1" id="tremolo-slider">
+						</div>
+						<div class="col-6 col-sm-3 pr-md-4 ml-auto">
+							<div class="input-group">
+								<input type="number" min="-100" max="100" value="0" class="form-control led-display" id="tremolo" disabled>
+								<div class="input-group-append">
+									<span class="input-group-text led-label">%</span>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="row form-group small">
+						<div class="col-6 col-md-3"></div>
+						<div class="col-6 col-md-2 pl-md-0 mb-3">
+							<div class="form-check">
+								<input type="checkbox" id="tremolo-free" class="form-check-input">
+								<label for="tremolo-free" class="form-check-label">
+									Free Choice
+								</label>
+							</div>
+						</div>
+						<div class="col-8 col-md-4 fade">
+							<input type="range" min="0" max="3" class="form-control-range mt-1" id="tremolo-range">
+						</div>
+						<div class="col-auto fade">
+							0&ThinSpace;&ndash;&ThinSpace;<span id="tremolo-max"></span>%
 						</div>
 					</div>
 				</fieldset>
