--- a/index.html
+++ b/index.html
@@ -386,8 +386,8 @@
 						</div>
 					</div>
 					<div class="row mb-5 small">
-						<div class="col-6 col-md-3"></div>
-						<div class="col-6 col-md-2 pl-md-0">
+						<div class="d-sm-none d-md-block col-6 col-md-3"></div>
+						<div class="col-auto col-md-2 pl-md-0 mb-3">
 							<div class="form-check">
 								<input type="checkbox" id="vibrato-free" class="form-check-input">
 								<label for="vibrato-free" class="form-check-label">
@@ -395,7 +395,7 @@
 								</label>
 							</div>
 						</div>
-						<div class="col-8 col-md-4 fade">
+						<div class="col-8 col-sm-7 col-md-4 fade">
 							<input type="range" min="1" max="7" class="form-control-range mt-1" id="vibrato-range">
 						</div>
 						<div class="col-auto fade">
@@ -419,8 +419,8 @@
 						</div>
 					</div>
 					<div class="row form-group small">
-						<div class="col-6 col-md-3"></div>
-						<div class="col-6 col-md-2 pl-md-0 mb-3">
+						<div class="d-sm-none d-md-block col-6 col-md-3"></div>
+						<div class="col-auto col-md-2 pl-md-0 mb-3">
 							<div class="form-check">
 								<input type="checkbox" id="tremolo-free" class="form-check-input">
 								<label for="tremolo-free" class="form-check-label">
@@ -428,7 +428,7 @@
 								</label>
 							</div>
 						</div>
-						<div class="col-8 col-md-4 fade">
+						<div class="col-8 col-sm-7 col-md-4 fade">
 							<input type="range" min="0" max="3" class="form-control-range mt-1" id="tremolo-range">
 						</div>
 						<div class="col-auto fade">
