Fix bugs, plan tracker.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 	<link rel="stylesheet" href="lib/bootstrap.min.css">
 	<link rel="stylesheet" href="page.css">
 	<meta name="viewport" content="initial-scale=1, minimum-scale=1">
+	<style id="disabled-operator-styles">
+		.operator-1 {  }
+		.operator-2 {  }
+		.operator-3 {  }
+		.operator-4 {  }
+	</style>
 </head>
 <body>
 	<form class="container bg-theme-dark" id="instrument-panel">
