Load patterns from CSV.

--- a/index.html
+++ b/index.html
@@ -75,6 +75,18 @@
 						</div>
 					</div>
 				</fieldset>
+				<fieldset class="panel">
+					<h1>File Operations</h1>
+					<div class="form-row form-group">
+						<div class="col-5 col-md-2">
+							<input type="file" id="upload" accept="text/csv" class="visually-hidden">
+							<label for="upload" class="btn btn-secondary w-100">
+								<img src="img/upload.png" width="16" height="16" alt="">
+								Upload
+							</label>
+						</div>
+					</div>
+				</fieldset>
 			</div>
 
 			<div class="tab-pane fade show active" id="instrument" role="tabpanel" aria-labelledby="instrument-tab">
