--- a/index.html
+++ b/index.html
@@ -455,6 +455,31 @@
 					</div>
 				</fieldset>
 				<fieldset class="panel">
+					<h1>Portamento</h1>
+					<div class="row form-group">
+						<label class="col-auto col-md-3 col-form-label" for="glide-slider">
+							Duration
+						</label>
+						<div class="col-12 col-md-7 mb-3 my-md-auto pl-md-0">
+							<input type="range" min="0" max="99" value="0" class="form-control-range mt-1" id="glide-slider">
+						</div>
+						<div class="col-4 col-sm-2 pr-md-4 ml-auto">
+							<input value="0" class="form-control led-display" id="glide" disabled>
+						</div>
+					</div>
+					<div class="row small">
+						<div class="d-sm-none d-md-block col-6 col-md-3"></div>
+						<div class="col-auto col-md-2 pl-md-0 mb-3">
+							<div class="form-check">
+								<input type="checkbox" id="fingered-glide" class="form-check-input">
+								<label for="fingered-glide" class="form-check-label">
+									Fingered
+								</label>
+							</div>
+						</div>
+					</div>
+				</fieldset>
+				<fieldset class="panel">
 					<h1>Filter</h1>
 					<div class="row form-group">
 						<div class="col-auto">
