Feedback UI. Get MIDI CCs to update UI.

--- a/index.html
+++ b/index.html
@@ -447,10 +447,10 @@
 							</div>
 						</div>
 						<div class="col-8 col-sm-7 col-md-4 fade">
-							<input type="range" min="0" max="3" class="form-control-range mt-1" id="tremolo-range">
+							<input type="range" min="0" max="3" value="0" class="form-control-range mt-1" id="tremolo-range">
 						</div>
 						<div class="col-auto fade">
-							0&ThinSpace;&ndash;&ThinSpace;<span id="tremolo-max"></span>%
+							0&ThinSpace;&ndash;&ThinSpace;<span id="tremolo-max">12</span>%
 						</div>
 					</div>
 				</fieldset>
