--- a/index.html
+++ b/index.html
@@ -34,8 +34,59 @@
 		<div class="tab-content" id="instrument-tabs">
 			<div class="tab-pane fade" id="performance" role="tabpanel" aria-labelledby="performance-tab">
 				<fieldset class="panel">
+					<h1>Compressor</h1>
+					<div class="row form-group">
+						<label class="col-auto col-md-2 col-form-label" for="pregain-slider">
+							Pre-Gain
+						</label>
+						<div class="col-12 col-md-7 mb-3 my-md-auto pl-md-0">
+							<input type="range" min="1" max="4" step="0.04" value="2.0" class="form-control-range mt-1" id="pregain-slider">
+						</div>
+						<div class="col-6 col-sm-3 pr-md-4 ml-auto">
+							<input type="number" min="1" max="4" step="0.1" value="2" class="form-control led-display" id="pregain">
+						</div>
+					</div>
+					<div class="row form-group">
+						<label class="col-auto col-md-2 col-form-label" for="compress-ratio-slider">
+							Ratio
+						</label>
+						<div class="col-12 col-md-7 mb-3 my-md-auto pl-md-0">
+							<input type="range" min="2" max="20" value="10" class="form-control-range mt-1" id="compress-ratio-slider">
+						</div>
+						<div class="col-6 col-sm-3 pr-md-4 ml-auto">
+							<input type="number" min="2" max="20" value="10" class="form-control led-display" id="compress-ratio">
+						</div>
+					</div>
+					<div class="row">
+						<label class="col-auto col-md-2 col-form-label" for="compress-release-slider">
+							Release
+						</label>
+						<div class="col-12 col-md-7 mb-3 my-md-auto pl-md-0">
+							<input type="range" min="100" max="1000" value="250" step="5" class="form-control-range mt-1" id="compress-release-slider">
+						</div>
+						<div class="col-6 col-sm-3 pr-md-4 ml-auto">
+							<div class="input-group">
+								<input type="number" min="0" max="1000" step="10" value="250" class="form-control led-display" id="compress-release">
+								<div class="input-group-append">
+									<span class="input-group-text led-label">ms</span>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="row small">
+						<div class="d-none d-md-block col-md-2 col-form-label"></div>
+						<div class="col-auto pl-md-0">
+							Short
+							<div class="custom-control custom-switch custom-control-inline">
+								<input type="checkbox" class="custom-control-input" id="long-compress-release" checked>
+								<label class="custom-control-label" for="long-compress-release">Long</label>
+							</div>
+						</div>
+					</div>
+				</fieldset>
+				<fieldset class="panel">
 					<h1>MIDI</h1>
-					<div class="form-row form-group">
+					<div class="row form-group">
 						<div class="col-5 col-md-2 my-2">
 							<button type="button" class="btn btn-secondary w-100" id="btn-enable-midi">
 								<span id="midi-led" class="led">&#x25CF;</span> MIDI
@@ -64,7 +115,7 @@
 				</fieldset>
 				<fieldset class="panel">
 					<h1>Audio Recorder</h1>
-					<div class="form-row form-group">
+					<div class="row form-group">
 						<div class="col-5 col-md-2 my-auto">
 							<button type="button" class="btn btn-secondary w-100" id="btn-record-audio">
 								<span id="record-led" class="led">&#x25CF;</span> Record
@@ -77,10 +128,10 @@
 				</fieldset>
 				<fieldset class="panel">
 					<h1>File Operations</h1>
-					<div class="form-row form-group">
+					<div class="row form-group">
 						<div class="col-5 col-md-2">
 							<input type="file" id="upload" accept="text/csv" class="visually-hidden">
-							<label for="upload" class="btn btn-secondary w-100">
+							<label for="upload" class="btn btn-secondary w-100 px-2">
 								<img src="img/upload.png" width="16" height="16" alt="">
 								Upload
 							</label>
