--- a/index.html
+++ b/index.html
@@ -498,10 +498,10 @@
 							</div>
 						</div>
 						<div class="col-8 col-sm-7 col-md-4 fade">
-							<input type="range" min="0" max="3" value="0" class="form-control-range mt-1" id="tremolo-range">
+							<input type="range" min="0" max="4" value="0" class="form-control-range mt-1" id="tremolo-range">
 						</div>
 						<div class="col-auto fade">
-							0&ThinSpace;&ndash;&ThinSpace;<span id="tremolo-max">12</span>%
+							<span id="tremolo-min">0</span>&ThinSpace;&ndash;&ThinSpace;<span id="tremolo-max">12</span>%
 						</div>
 					</div>
 				</fieldset>
