--- a/index.html
+++ b/index.html
@@ -380,13 +380,24 @@
 								<label class="custom-control-label" for="fast-lfo">Fast</label>
 							</div>
 						</div>
-						<div class="col-auto">
+						<div class="col-6">
 							<div class="form-check">
 								<input type="checkbox" id="lfo-rate-free" class="form-check-input">
 								<label for="lfo-rate-free" class="form-check-label">
 									Free Choice
 								</label>
 							</div>
+						</div>
+					</div>
+					<div class="row form-group">
+						<label class="col-3 col-form-label" for="lfo-shape">
+							Shape
+						</label>
+						<div class="col-3 col-md-2 pl-md-0">
+						</div>
+						<div class="col-6" style="margin-left: -3px">
+							<button type="button" class="btn btn-dark" data-toggle="button" aria-pressed="false" id="btn-key-sync">
+								Key Sync
 						</div>
 					</div>
 					<div class="row form-group">
