--- a/index.html
+++ b/index.html
@@ -542,6 +542,51 @@
 					</div>
 				</fieldset>
 				<fieldset class="panel">
+					<h1>Pan</h1>
+					<div class="row form-group">
+						<label class="col-2 col-sm-1 col-md-3 col-form-label" for="pan-source">
+							Mode
+						</label>
+						<div class="col-auto pl-md-0 pr-1">
+							<select class="form-control led-display led-text" id="pan-source">
+								<option value="0" selected>Fixed</option>
+								<option value="1">Note</option>
+								<option value="2">Velocity</option>
+							</select>
+						</div>
+						<div class="col-auto pl-1">
+							<select class="form-control led-display led-text text-center" id="pan-direction">
+								<option value="1" selected>🡺</option>
+								<option value="-1">🡸</option>
+							</select>
+						</div>
+					</div>
+					<div class="row form-group">
+						<label class="col-auto col-md-3 col-form-label" for="pan-width-slider">
+							Stereo Width
+						</label>
+						<div class="col-12 col-md-7 mb-3 my-md-auto pl-md-0">
+							<input type="range" min="0" max="99" value="99" class="form-control-range mt-1" id="pan-width-slider">
+						</div>
+						<div class="col-4 col-sm-2 pr-md-4 ml-auto">
+							<input value="99" class="form-control led-display" id="pan-width">
+						</div>
+					</div>
+					<div class="row form-group">
+						<div class="d-none d-sm-block col-1 col-md-3"></div>
+						<div class="col-6 col-sm-auto pl-md-0 pr-4 pr-md-2">
+							<button type="button" class="btn btn-secondary w-100" id="btn-pan-centre">
+								Set Centre
+							</button>
+						</div>
+						<div class="col-6 col-sm-auto pl-4 pl-md-2">
+							<button type="button" class="btn btn-secondary w-100" id="btn-pan-range">
+								Set Range
+							</button>
+						</div>
+					</div>
+				</fieldset>
+				<fieldset class="panel">
 					<h1>Filter</h1>
 					<div class="row form-group">
 						<div class="col-auto">
