Bug fix previous commit.

--- a/index.html
+++ b/index.html
@@ -929,7 +929,7 @@
 				<span class="ml-2">Become a patron</span>
 			</a>
 		</div>
-		<form class="d-inline-block align-bottom" action="https://www.paypal.com/donate" method="post" target="_top" style="line-height: 0;">
+		<form class="d-inline-block align-bottom" action="https://www.paypal.com/donate" method="post" target="_blank" style="line-height: 0;">
 			<input type="hidden" name="business" value="XZYN78CQHAVDN">
 			<input type="hidden" name="no_recurring" value="0">
 			<input type="hidden" name="item_name" value="Thank you for supporting my work as a creator with disabilities.">
