--- a/index.html
+++ b/index.html
@@ -552,6 +552,7 @@
 								<option value="0" selected>Fixed</option>
 								<option value="1">Note</option>
 								<option value="2">Velocity</option>
+								<option value="3">LFO</option>
 							</select>
 						</div>
 						<div class="col-auto pl-1">
