Prevent distortion going out of bounds.

--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
 						<label for="distortion">Distortion</label>
 						<div class="d-inline-block mx-2 align-middle">
 							<div class="input-group">
-								<input type="number" min="0" value="0" step="0.2" class="form-control led-display d-inline" id="distortion" style="max-width: 90px">
+								<input type="number" min="0" max="921" value="0" step="0.2" class="form-control led-display d-inline" id="distortion" style="max-width: 90px">
 								<div class="input-group-append">
 									<span class="input-group-text led-label">dB</span>
 								</div>
@@ -613,7 +613,7 @@
 							</div>
 							<div class="col-6 col-sm-3 pr-md-4 ml-auto">
 								<div class="input-group">
-									<input type="number" min="-770.6" max="770.6" step="0.1" value="0" class="form-control led-display" id="filter-resonance">
+									<input type="number" min="-758.5" max="770.5" step="0.25" value="0" class="form-control led-display" id="filter-resonance">
 									<div class="input-group-append">
 										<span class="input-group-text led-label">dB</span>
 									</div>
