Dropdown CSS fix

--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
 							<button class="btn btn-dark dropdown-toggle rounded-0" type="button" id="btn-lfo-waveform" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 								<img src="img/triangle-1.png" width="48" height="24" alt="LFO Waveform">
 							</button>
-							<div class="dropdown-menu p-0">
+							<div class="dropdown-menu dropdown-compact p-0">
 								<div id="lfo-waveform" class="container btn-group-toggle w-100 p-0" data-toggle="buttons">
 									<label class="btn btn-dark rounded-0 w-100">
 										<input type="radio" name="lfo-waveform" value="sine">
