--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
 					<h1>LFO</h1>
 					<div class="row form-group">
 						<label class="col-auto col-md-3 col-form-label" for="lfo-rate-slider">
-							Frequency
+							Rate
 						</label>
 						<div class="col-12 col-md-6 mb-3 my-md-auto pl-md-0">
 							<input type="range" min="0" max="6" value="0" class="form-control-range mt-1" id="lfo-rate-slider">
@@ -389,7 +389,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="row form-group">
+					<div class="row mb-4">
 						<label class="col-3 col-form-label" for="lfo-shape">
 							Shape
 						</label>
@@ -457,17 +457,35 @@
 					</div>
 					<div class="row mb-5">
 						<div class="d-none d-md-block col-md-3"></div>
-						<div class="col-auto pl-md-0 small ml-auto ml-md-0">
+						<div class="col-5 col-sm-auto pl-md-0 small">
 							<div class="form-check form-check-inline">
 								<input type="radio" name="lfo-fade-direction" value="1" id="lfo-fade-in" class="form-check-input" checked>
 								<label for="lfo-fade-in" class="form-check-label">
 									Fade in
 								</label>
 							</div>
+						</div>
+						<div class="col-5 col-sm-auto small">
 							<div class="form-check form-check-inline">
 								<input type="radio" name="lfo-fade-direction" value="-1" id="lfo-fade-out" class="form-check-input">
 								<label for="lfo-fade-out" class="form-check-label">
 									Fade out
+								</label>
+							</div>
+						</div>
+						<div class="col-5 col-sm-auto small">
+							<div class="form-check form-check-inline">
+								<input type="radio" name="lfo-fade-parameter" value="0" id="lfo-fade-depth" class="form-check-input" checked>
+								<label for="lfo-fade-depth" class="form-check-label">
+									Fade depth
+								</label>
+							</div>
+						</div>
+						<div class="col-5 col-sm-auto small">
+							<div class="form-check form-check-inline">
+								<input type="radio" name="lfo-fade-parameter" value="1" id="lfo-fade-rate" class="form-check-input">
+								<label for="lfo-fade-rate" class="form-check-label">
+									Fade rate
 								</label>
 							</div>
 						</div>
@@ -488,7 +506,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="row mb-5 small">
+					<div class="row mb-4 small">
 						<div class="d-sm-none d-md-block col-6 col-md-3"></div>
 						<div class="col-auto col-md-2 pl-md-0 mb-3">
 							<div class="form-check">
