--- a/index.html
+++ b/index.html
@@ -354,6 +354,53 @@
 					</div>
 				</fieldset>
 				<fieldset class="panel">
+					<h1>Pitch</h1>
+					<div class="row form-group">
+						<label class="col-auto col-md-3 col-form-label" for="transpose-slider">
+							Transpose
+						</label>
+						<div class="col-12 col-md-7 mb-3 my-md-auto pl-md-0">
+							<input type="range" min="-24" max="24" value="0" class="form-control-range mt-1" id="transpose-slider">
+						</div>
+						<div class="col-4 col-sm-2 pr-md-4 ml-auto">
+							<input type="number" value="0" class="form-control led-display" id="transpose">
+						</div>
+					</div>
+					<div class="row mb-2">
+						<div class="col-auto">
+							Mono
+							<div class="custom-control custom-switch custom-control-inline">
+								<input type="checkbox" checked class="custom-control-input" id="poly-switch" data-toggle="collapse" data-target="#glide-settings" aria-expanded="false" aria-controls="glide-settings">
+								<label class="custom-control-label" for="poly-switch">Poly</label>
+							</div>
+						</div>
+					</div>
+					<div id="glide-settings" class="collapse">
+						<div class="row form-group">
+							<label class="col-auto col-md-3 col-form-label" for="glide-slider">
+								Portamento
+							</label>
+							<div class="col-12 col-md-7 mb-3 my-md-auto pl-md-0">
+								<input type="range" min="0" max="99" value="0" class="form-control-range mt-1" id="glide-slider">
+							</div>
+							<div class="col-4 col-sm-2 pr-md-4 ml-auto">
+								<input type="number" value="0" class="form-control led-display" id="glide">
+							</div>
+						</div>
+						<div class="row small">
+							<div class="d-sm-none d-md-block col-6 col-md-3"></div>
+							<div class="col-auto col-md-2 pl-md-0 mb-3">
+								<div class="form-check">
+									<input type="checkbox" id="fingered-glide" class="form-check-input">
+									<label for="fingered-glide" class="form-check-label">
+										Fingered
+									</label>
+								</div>
+							</div>
+						</div>
+					</div>
+				</fieldset>
+				<fieldset class="panel">
 					<h1>LFO</h1>
 					<div class="row form-group">
 						<label class="col-auto col-md-3 col-form-label" for="lfo-rate-slider">
@@ -554,31 +601,6 @@
 						</div>
 						<div class="col-auto fade">
 							<span id="tremolo-min">0</span>&ThinSpace;&ndash;&ThinSpace;<span id="tremolo-max">12</span>%
-						</div>
-					</div>
-				</fieldset>
-				<fieldset class="panel">
-					<h1>Portamento</h1>
-					<div class="row form-group">
-						<label class="col-auto col-md-3 col-form-label" for="glide-slider">
-							Duration
-						</label>
-						<div class="col-12 col-md-7 mb-3 my-md-auto pl-md-0">
-							<input type="range" min="0" max="99" value="0" class="form-control-range mt-1" id="glide-slider">
-						</div>
-						<div class="col-4 col-sm-2 pr-md-4 ml-auto">
-							<input value="0" class="form-control led-display" id="glide" disabled>
-						</div>
-					</div>
-					<div class="row small">
-						<div class="d-sm-none d-md-block col-6 col-md-3"></div>
-						<div class="col-auto col-md-2 pl-md-0 mb-3">
-							<div class="form-check">
-								<input type="checkbox" id="fingered-glide" class="form-check-input">
-								<label for="fingered-glide" class="form-check-label">
-									Fingered
-								</label>
-							</div>
 						</div>
 					</div>
 				</fieldset>
