--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
 				</fieldset>
 				<fieldset class="panel">
 					<h1>Filter</h1>
-					<div id="filter-config" class="collapse show">
+					<div id="filter-config">
 						<div class="row form-group">
 							<label class="col-auto col-md-3 col-form-label" for="filter-cutoff-slider">
 								Cutoff
@@ -415,11 +415,27 @@
 							</div>
 						</div>
 						<div class="row form-group">
+							<label class="col-auto col-md-3 col-form-label" for="filter-key-track-slider">
+								Key Tracking
+							</label>
+							<div class="col-12 col-md-6 mb-3 my-md-auto pl-md-0">
+								<input type="range" min="-64" max="64" value="0" class="form-control-range mt-1" id="filter-key-track-slider">
+							</div>
+							<div class="col-6 col-sm-3 pr-md-4 ml-auto">
+								<div class="input-group">
+									<input type="number" min="-201" max="201" step="3" value="0" class="form-control led-display" id="filter-key-track">
+									<div class="input-group-append">
+										<span class="input-group-text led-label">%</span>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="row form-group">
 							<label class="col-auto col-md-3 col-form-label" for="filter-resonance-slider">
 								Resonance
 							</label>
 							<div class="col-12 col-md-6 mb-3 my-md-auto pl-md-0">
-								<input type="range" min="0" max="25" step="0.25" value="0" class="form-control-range mt-1" id="filter-resonance-slider">
+								<input type="range" min="-5" max="31" step="0.25" value="0" class="form-control-range mt-1" id="filter-resonance-slider">
 							</div>
 							<div class="col-6 col-sm-3 pr-md-4 ml-auto">
 								<div class="input-group">
