Implement "negative distortion".

--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
 						<label for="distortion">Distortion</label>
 						<div class="d-inline-block mx-2 align-middle">
 							<div class="input-group">
-								<input type="number" min="0" max="921" value="0" step="0.2" class="form-control led-display d-inline" id="distortion" style="max-width: 90px">
+								<input type="number" max="921" value="0" step="0.2" class="form-control led-display d-inline" id="distortion" style="max-width: 90px">
 								<div class="input-group-append">
 									<span class="input-group-text led-label">dB</span>
 								</div>
