--- a/index.html
+++ b/index.html
@@ -366,6 +366,17 @@
 							<input type="number" value="0" class="form-control led-display" id="transpose">
 						</div>
 					</div>
+					<div class="row form-group">
+						<label class="col-auto col-md-3 col-form-label" for="detune-slider">
+							Detune
+						</label>
+						<div class="col-12 col-md-7 mb-3 my-md-auto pl-md-0">
+							<input type="range" min="-50" max="50" value="0" class="form-control-range mt-1" id="detune-slider">
+						</div>
+						<div class="col-4 col-sm-2 pr-md-4 ml-auto">
+							<input type="number" value="0" class="form-control led-display" id="detune">
+						</div>
+					</div>
 					<div class="row mb-2">
 						<div class="col-auto">
 							Mono
@@ -378,7 +389,7 @@
 					<div id="glide-settings" class="collapse">
 						<div class="row form-group">
 							<label class="col-auto col-md-3 col-form-label" for="glide-slider">
-								Portamento
+								Glide
 							</label>
 							<div class="col-12 col-md-7 mb-3 my-md-auto pl-md-0">
 								<input type="range" min="0" max="99" value="0" class="form-control-range mt-1" id="glide-slider">
